<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="pe.edu.upc.tratohechotec.viewcontrollers.fragments.ProfileFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_margin">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_person_black_24dp"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/loginLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageView"
            app:layout_constraintEnd_toEndOf="parent">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/loginEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/default_margin"
                android:hint="@string/login_label"
                android:text="@string/mock_text"
                android:enabled="false"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/loginLabel"
            app:layout_constraintStart_toEndOf="@id/imageView"
            app:layout_constraintEnd_toEndOf="parent">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/default_margin"
                android:hint="@string/password_label"
                android:text="@string/mock_text"
                android:enabled="false"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>
        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/passwordLabel"
            app:layout_constraintStart_toStartOf="parent"
            android:numStars="5"
            android:isIndicator="true"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/nameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/ratingBar"
            app:layout_constraintStart_toStartOf="parent">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/default_margin"
                android:hint="@string/name_label"
                android:text="@string/mock_text"
                android:enabled="false"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/lastNamesLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/nameLabel"
            app:layout_constraintStart_toStartOf="parent">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/lastNamesEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/default_margin"
                android:hint="@string/last_names_label"
                android:text="@string/mock_text"
                android:enabled="false"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/lastNamesLabel"
            app:layout_constraintStart_toStartOf="parent">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/default_margin"
                android:hint="@string/email_label"
                android:text="@string/mock_text"
                android:enabled="false"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/companyLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/emailLabel"
            app:layout_constraintStart_toStartOf="parent">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/companyEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/default_margin"
                android:hint="@string/company_label"
                android:text="@string/mock_text"
                android:enabled="false"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/serviceLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/companyLabel"
            app:layout_constraintStart_toStartOf="parent">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/serviceEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/default_margin"
                android:hint="@string/service_label"
                android:text="@string/mock_text"
                android:enabled="false"/>
        </android.support.design.widget.TextInputLayout>
    </android.support.constraint.ConstraintLayout>


</FrameLayout>
