<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="pe.edu.upc.tratohechotec.viewcontrollers.fragments.SettingsFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/settingsLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/settings_title_label"
            android:textSize="18dp"
            android:textStyle="bold"/>
        <Switch
            android:id="@+id/quotationSolicitudeSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settingsLabel"
            android:checked="true"/>
        <TextView
            android:id="@+id/quotationSolicitudeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/quotationSolicitudeSwitch"
            app:layout_constraintStart_toStartOf="@id/settingsLabel"
            android:text="@string/settings_quotation_solicitude_label"/>
        <Switch
            android:id="@+id/customerAnswerSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/quotationSolicitudeSwitch"
            app:layout_constraintEnd_toEndOf="parent"
            android:checked="true"/>
        <TextView
            android:id="@+id/customerAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/customerAnswerSwitch"
            app:layout_constraintStart_toStartOf="@id/settingsLabel"
            android:text="@string/settings_customer_answer_label"/>
    </android.support.constraint.ConstraintLayout>

</FrameLayout>
