<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".viewcontrollers.activities.NewQuotationActivity"
    tools:showIn="@layout/activity_new_quotation">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/descriptionLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/default_margin"
            android:hint="@string/description_label"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/priceLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/descriptionLabel"
        app:layout_constraintStart_toStartOf="parent">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/priceEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/default_margin"
            android:hint="@string/price_label"
            android:inputType="numberDecimal"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/estimatedTimeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/priceLabel"
        app:layout_constraintStart_toStartOf="parent">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/estimatedTimeEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/default_margin"
            android:hint="Tiempo Estimado (Días)"
            android:inputType="number"/>
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:id="@+id/includesMaterialsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/estimatedTimeLabel"
        app:layout_constraintStart_toStartOf="@id/estimatedTimeLabel"
        android:text="@string/includes_materials_label"
        android:textSize="18dp"/>
    <CheckBox
        android:id="@+id/includesMaterialsCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/includesMaterialsLabel"
        app:layout_constraintStart_toEndOf="@id/includesMaterialsLabel"/>

    <TextView
        android:id="@+id/jsonText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/includesMaterialsLabel"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/mock_text"/>


</android.support.constraint.ConstraintLayout>